# yallabuy

./: Account.cpp  Account.h  Address.cpp  Address.h  Array.h  Buyer.cpp  Buyer.h  BuyerSeller.cpp  BuyerSeller.h  CMakeLists.txt  CUI.cpp  CUI.h  Date.cpp  Date.h  Ecommerce.sln  Feedback.cpp  Feedback.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  MainHeader.h  Manager.cpp  Manager.h  OFunctions.cpp  OFunctions.h  Order.cpp  Order.h  README.md  Seller.cpp  Seller.h  main.cpp
Debug/: Ecommerce.ilk
Ecommerce/: Array2.h  Ecommerce.vcxproj  Ecommerce.vcxproj.filters  Func.cpp  YallaBuyTes1.txt  test10.txt  test6.txt  test7.txt  test8.txt  test9.txt
Ecommerce/Debug/: vc142.idb
Ecommerce/Debug/Ecommerce.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ecommerce.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Ecommerce/x64/Debug/: buyer.obj.enc  vc142.idb
Ecommerce/x64/Debug/Ecommerce.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ecommerce.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Ecommerce.ilk
